migrator: Init job_size to 1000 and Split to true in migrator batch (#2253)
Fix #10107

--- a/modules/migrator/doc/fr/CHANGELOG
+++ b/modules/migrator/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10107 L'option Split doit être défini à True et la taille d'un job à 1000 par défaut dans le batch migrator
+
 Version 2.2 - 2018-10-12
 * FEA#9975 Gestion de la création de la table staging à partir des fichiers csv
 
