--- a/modules/migrator/doc/en/CHANGELOG
+++ b/modules/migrator/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10107 Split option must be set to True and default job_size to 1000 for migrator batch
+
 Version 2.2 - 2018-10-12
 * FEA#9975 Managing the creation of staging table from csv files
 
