claim_group_life_fr: Fix translations claim_salary_fr: Fix translations (#2263)
Fix #0000

--- a/modules/claim_salary_fr/locale/fr.po
+++ b/modules/claim_salary_fr/locale/fr.po
@@ -561,10 +561,10 @@ msgctxt ""
 "model:rule_engine.rule_parameter,selection:2_date_de_reference_regle_standard_de_calcul_de_la_revalorisation"
 msgid ""
 "DAT: Date d'arrêt de travail\n"
-"DEI: Date d'affet d'indémnisation"
+"DEI: Date d'effet d'indémnisation"
 msgstr ""
 "DAT: Date d'arrêt de travail\n"
-"DEI: Date d'affet d'indémnisation"
+"DEI: Date d'effet d'indémnisation"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,selection:3_1ere_revalorisation_regle_standard_de_calcul_de_la_revalorisation"
@@ -589,14 +589,12 @@ msgid ""
 "changement_taux: Changement de valeur du point\n"
 "date_anniversaire_1er_revalo: A la date anniversaire de la 1ere revalo\n"
 "01/01/YEARLY: Tous les 1er janvier\n"
-"01/07/YEARLY: Tous les 1er juillet\n"
-"D0101: Met Quatrem au 01/01 avec Val  "
+"01/07/YEARLY: Tous les 1er juillet  "
 msgstr ""
 "changement_taux: Changement de valeur du point\n"
 "date_anniversaire_1er_revalo: A la date anniversaire de la 1ere revalo\n"
 "01/01/YEARLY: Tous les 1er janvier\n"
-"01/07/YEARLY: Tous les 1er juillet\n"
-"D0101: Met Quatrem au 01/01 avec Val  "
+"01/07/YEARLY: Tous les 1er juillet"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:1_reval_mode_regle_standard_de_calcul_de_la_revalorisation"
@@ -636,8 +634,8 @@ msgid "PMSS"
 msgstr "PMSS"
 
 msgctxt "model:table.dimension.value,name:agirc_dimension_value_2016"
-msgid "[01/01/2016 - ["
-msgstr "[01/01/2016 - ["
+msgid "[01/01/2016 - 01/01/2017["
+msgstr "[01/01/2016 - 01/01/2017["
 
 msgctxt "model:table.dimension.value,name:agirc_dimension_value_2017"
 msgid "[01/01/2017 - 01/01/2018["
@@ -648,8 +646,8 @@ msgid "[01/01/2018 - 01/01/2019["
 msgstr "[01/01/2018 - 01/01/2019["
 
 msgctxt "model:table.dimension.value,name:arrco_dimension_value_2016"
-msgid "[01/01/2016 - ["
-msgstr "[01/01/2016 - ["
+msgid "[01/01/2016 - 01/01/2017["
+msgstr "[01/01/2016 - 01/01/2017["
 
 msgctxt "model:table.dimension.value,name:arrco_dimension_value_2017"
 msgid "[01/01/2017 - 01/01/2018["
@@ -734,10 +732,6 @@ msgstr "[01/01/2017 - 01/01/2018["
 msgctxt "model:table.dimension.value,name:pmss_dimension_value_2018"
 msgid "[01/01/2018 - 01/01/2019["
 msgstr "[01/01/2018 - 01/01/2019["
-
-msgctxt "selection:contract.option.benefit,salary_mode:"
-msgid ""
-msgstr " "
 
 msgctxt "selection:contract.option.benefit,salary_mode:"
 msgid "Last 12 months"
