--- a/modules/claim_group_life_fr/locale/fr.po
+++ b/modules/claim_group_life_fr/locale/fr.po
@@ -44,7 +44,7 @@ msgstr "Evénement"
 
 msgctxt "field:claim.loss.hospitalisation.period,rec_name:"
 msgid "Record Name"
-msgstr "Nom"
+msgstr "Nom de l'enregistrement"
 
 msgctxt "field:claim.loss.hospitalisation.period,start_date:"
 msgid "Start Date"
@@ -78,7 +78,7 @@ msgstr "Date d'effet d'indemnisation"
 
 msgctxt "model:extra_data,string:ijss_extra_data"
 msgid "IJSS"
-msgstr "Indémnité journalière de la sécurité sociale"
+msgstr "IJSS"
 
 msgctxt ""
 "model:rule_engine,name:calcul_des_limitations_du_traitement_journalier"
@@ -95,8 +95,18 @@ msgid "Calcul du traitement de base  journalier en fonction des tranches"
 msgstr "Calcul du traitement de base journalier en fonction des tranches"
 
 msgctxt "model:rule_engine,name:franchise_base_sur_un_nombre_de_jour_defaut"
-msgid "Inclusion du mi-temps thérapeutique"
-msgstr "Inclusion du mi-temps thérapeutique"
+msgid "Franchise basée sur un nombre de jours"
+msgstr "Franchise basée sur un nombre de jours"
+
+msgctxt ""
+"model:rule_engine,name:franchise_fixe_en_arret_total_et_mi_temps_therapeutique"
+msgid "Franchise fixe arrêt total et temps partiel thérapeutique"
+msgstr "Franchise fixe arrêt total et temps partiel thérapeutique"
+
+msgctxt ""
+"model:rule_engine,name:franchise_fixe_en_arret_total_maladie_at_mp_maternite_hospi"
+msgid "Franchise fixe en arrêt total (Maladie AT/MP maternité hospi)"
+msgstr "Franchise fixe en arrêt total (Maladie AT/MP maternité hospi)"
 
 msgctxt ""
 "model:rule_engine,name:franchise_fixe_toute_nature_d_arret_confondue_pour_un_arret_total_defaut"
@@ -147,6 +157,32 @@ msgstr ""
 "cumulee_sur_annee_civile:Cumulée sur l'année civile"
 
 msgctxt ""
+"model:rule_engine.rule_parameter,selection:1_type_de_franchise_franchise_fixe_en_arret_total_et_mi_temps_therapeutique"
+msgid ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+msgstr ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:1_type_de_franchise_franchise_fixe_en_arret_total_maladie_at_mp_maternite_hospi"
+msgid ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+msgstr ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+
+msgctxt ""
 "model:rule_engine.rule_parameter,selection:1_type_de_franchise_toute_nature_arret_defaut"
 msgid ""
 "continue:Continue\n"
@@ -175,23 +211,51 @@ msgstr ""
 msgctxt ""
 "model:rule_engine.rule_parameter,selection:5_inclusion_du_mi_temps_salaire_brut_net_par_tranche_de_salaire"
 msgid ""
-"ijb_ijss_mtt:IJ de base - IJSS - mi-temps\n"
-"min_ijb_2_tdrj_mtt: (Minimum entre l'IJ de base et 100 % du traitement de référence) - IJSS - mi-temps\n"
+"ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
+"min_ijb_2_tdrj_mtt:Minimum de (Prestation base / 2) et (100% traitement de référence - IJSS - mi-temps) \n"
 "tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
 msgstr ""
-"ijb_ijss_mtt:IJ de base - IJSS - mi-temps\n"
-"min_ijb_2_tdrj_mtt: (Minimum entre l'IJ de base et 100 % du traitement de référence) - IJSS - mi-temps\n"
+"ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
+"min_ijb_2_tdrj_mtt:Minimum de (Prestation base / 2) et (100% traitement de référence - IJSS - mi-temps) \n"
 "tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
+
+msgctxt "model:rule_engine.rule_parameter,selection:None"
+msgid ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+msgstr ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+
+msgctxt "model:rule_engine.rule_parameter,selection:None"
+msgid "jb_ijss_mtt:IJ de base - IJSS - mi-temps"
+msgstr "jb_ijss_mtt:IJ de base - IJSS - mi-temps"
+
+msgctxt "model:rule_engine.rule_parameter,selection:None"
+msgid ""
+"salaire_brut:Salaire Brut\n"
+"salaire_net:Salaire Net\n"
+"salaire_brut_prime:Salaire Brut + Primes\n"
+"salaire_net_prime:Salaire Net + Primes"
+msgstr ""
+"salaire_brut:Salaire Brut\n"
+"salaire_net:Salaire Net\n"
+"salaire_brut_prime:Salaire Brut + Primes\n"
+"salaire_net_prime:Salaire Net + Primes"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,selection:inclusion_du_mi_temps_therapeutique_calcul_des_limitations_du_traitement_journalier"
 msgid ""
-"ijb_ijss_mtt:IJ de base - IJSS - mi-temps\n"
-"min_ijb_2_tdrj_mtt: (Minimum entre l'IJ de base et 100 % du traitement de référence) - IJSS - mi-temps\n"
+"ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
+"min_ijb_2_tdrj_mtt:Minimum de (Prestation de base / 2) et(100% traitement de référence - IJSS - mi-temps) \n"
 "tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
 msgstr ""
-"ijb_ijss_mtt:IJ de base - IJSS - mi-temps\n"
-"min_ijb_2_tdrj_mtt: (Minimum entre l'IJ de base et 100 % du traitement de référence) - IJSS - mi-temps\n"
+"ijb_ijss_mtt:Prestation de base - IJSS - mi-temps\n"
+"min_ijb_2_tdrj_mtt:Minimum de (Prestation de base / 2) et(100% traitement de référence - IJSS - mi-temps) \n"
 "tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
 
 msgctxt ""
@@ -219,8 +283,8 @@ msgstr "Nombre de jours de franchise minimum (optionnel)"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:1_pourcentage_ij_ta_salaire_brut_net_par_tranche_de_salaire"
-msgid "Pourcentage IJ TA"
-msgstr "Pourcentage IJ TA"
+msgid "Pourcentage TA"
+msgstr "Pourcentage TA"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:1_type_de_franchise_base_sur_un_nombre_de_jour_defaut"
@@ -233,9 +297,29 @@ msgid "Type de franchise"
 msgstr "Type de franchise"
 
 msgctxt ""
+"model:rule_engine.rule_parameter,string:1_type_de_franchise_franchise_fixe_en_arret_total_et_mi_temps_therapeutique"
+msgid "Type de franchise"
+msgstr "Type de franchise"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:1_type_de_franchise_franchise_fixe_en_arret_total_maladie_at_mp_maternite_hospi"
+msgid "Type de franchise"
+msgstr "Type de franchise"
+
+msgctxt ""
 "model:rule_engine.rule_parameter,string:1_type_de_franchise_toute_nature_arret_defaut"
 msgid "Type de franchise"
 msgstr "Type de franchise"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:2_franchise_franchise_fixe_en_arret_total_et_mi_temps_therapeutique"
+msgid "Franchise (jours)"
+msgstr "Franchise (jours)"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:2_franchise_franchise_fixe_en_arret_total_maladie_at_mp_maternite_hospi"
+msgid "Franchise (jours)"
+msgstr "Franchise (jours)"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:2_nombre_de_jours_de_franchise_base_sur_un_nombre_de_jour_default"
@@ -254,8 +338,8 @@ msgstr "Nombre de jours de franchise"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:2_pourcentage_ij_tb_salaire_brut_net_par_tranche_de_salaire"
-msgid "Pourcentage IJ TB"
-msgstr "Pourcentage IJ TB"
+msgid "Pourcentage TB"
+msgstr "Pourcentage TB"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:3_date_de_prejudice_base_sur_un_nombre_de_jour_default"
@@ -263,9 +347,29 @@ msgid "Date de prejudice"
 msgstr "Date de prejudice"
 
 msgctxt ""
+"model:rule_engine.rule_parameter,string:3_franchise_en_cas_de_maladie_professionnelle_franchise_fixe_en_arret_total_et_mi_temps_therapeutique"
+msgid "Franchise en cas de maladie professionnelle (jours)"
+msgstr "Franchise en cas de maladie professionnelle (jours)"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:3_franchise_en_cas_de_maladie_professionnelle_franchise_fixe_en_arret_total_maladie_at_mp_maternite_hospi"
+msgid "Franchise en cas de maladie professionnelle (jours)"
+msgstr "Franchise en cas de maladie professionnelle (jours)"
+
+msgctxt ""
 "model:rule_engine.rule_parameter,string:3_pourcentage_ij_tc_salaire_brut_net_par_tranche_de_salaire"
-msgid "Pourcentage IJ TC"
-msgstr "Pourcentage IJ TC"
+msgid "Pourcentage TC"
+msgstr "Pourcentage TC"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:4_franchise_en_cas_d_accident_du_travail_franchise_fixe_en_arret_total_et_mi_temps_therapeutique"
+msgid "Franchise en cas d'accident du travail (jours)"
+msgstr "Franchise en cas d'accident du travail (jours)"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:4_franchise_en_cas_d_accident_du_travail_franchise_fixe_en_arret_total_maladie_at_mp_maternite_hospi"
+msgid "Franchise en cas d'accident du travail (jours)"
+msgstr "Franchise en cas d'accident du travail (jours)"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:4_traitement_de_reference_salaire_brut_net_par_tranche_de_salaire"
@@ -273,34 +377,110 @@ msgid "Traitement de référence"
 msgstr "Traitement de référence"
 
 msgctxt ""
+"model:rule_engine.rule_parameter,string:5_franchise_en_cas_de_maternite_franchise_fixe_en_arret_total_et_mi_temps_therapeutique"
+msgid "Franchise en cas de maternité (jours)"
+msgstr "Franchise en cas de maternité (jours)"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:5_franchise_en_cas_de_maternite_franchise_fixe_en_arret_total_maladie_at_mp_maternite_hospi"
+msgid "Franchise en cas de maternité (jours)"
+msgstr "Franchise en cas de maternité (jours)"
+
+msgctxt ""
 "model:rule_engine.rule_parameter,string:5_inclusion_du_mi_temps_salaire_brut_net_par_tranche_de_salaire"
-msgid "Inclusion du mi-temps thérapeutique"
-msgstr "Inclusion du mi-temps thérapeutique"
+msgid "Calcul du mi-temps thérapeutique"
+msgstr "Calcul du mi-temps thérapeutique"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:6_deduction_de_l_ijss_salaire_brut_net_par_tranche_de_salaire"
-msgid "Déduction de l'IJSS"
-msgstr "Déduction de l'IJSS"
+msgid "Sans déduction de l'IJSS"
+msgstr "Sans déduction de l'IJSS"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:6_franchise_en_cas_d_hospitalisation_franchise_fixe_en_arret_total_et_mi_temps_therapeutique"
+msgid "Franchise en cas d'hospitalisation (jours)"
+msgstr "Franchise en cas d'hospitalisation (jours)"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:6_franchise_en_cas_d_hospitalisation_franchise_fixe_en_arret_total_maladie_at_mp_maternite_hospi"
+msgid "Franchise en cas d'hospitalisation (jours)"
+msgstr "Franchise en cas d'hospitalisation (jours)"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:7_limiter_au_net_salaire_brut_net_par_tranche_de_salaire"
 msgid "Limiter au net"
 msgstr "Limiter au net"
 
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Date de prejudice"
+msgstr "Date de prejudice"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Description"
+msgstr "Description"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "IJSS"
+msgstr "IJSS"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Limiter au net"
+msgstr "Limiter au net"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Montant du mi-temps thérapeutique"
+msgstr "Montant du mi-temps thérapeutique"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Méthode de traitement de référence"
+msgstr "Méthode de traitement de référence"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Nombre de jours de franchise minimum (optionnel)"
+msgstr "Nombre de jours de franchise minimum (optionnel)"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Traitement de base journalier"
+msgstr "Traitement de base journalier"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Traitement de référence"
+msgstr "Traitement de référence"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Traitement journalier de base"
+msgstr "Traitement journalier de base"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Tranche TA"
+msgstr "Tranche TA"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Tranche TB"
+msgstr "Tranche TB"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Tranche TC"
+msgstr "Tranche TC"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Type de franchise"
+msgstr "Type de franchise"
+
 msgctxt ""
 "model:rule_engine.rule_parameter,string:_pourcentage_ij_tc_calcul_du_traitement_de_base_journalier_en_fonction_des_tranches"
-msgid "Pourcentage IJ TC"
-msgstr "Pourcentage IJ TC"
+msgid "Pourcentage TC"
+msgstr "Pourcentage TC"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:deduction_de_l_ijss_calcul_des_limitations_du_traitement_journalier"
-msgid "Déduction de l'IJSS"
-msgstr "Déduction de l'IJSS"
+msgid "Sans déduction de l'IJSS"
+msgstr "Sans déduction de l'IJSS"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:deduction_de_l_ijss_regle_de_calcul_des_deductions_des_montants_percus"
-msgid "Déduction de l'IJSS"
-msgstr "Déduction de l'IJSS"
+msgid "Sans déduction de l'IJSS"
+msgstr "Sans déduction de l'IJSS"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:description_calcul_des_periodes_d_indemnisation"
@@ -310,27 +490,27 @@ msgstr "Description"
 msgctxt ""
 "model:rule_engine.rule_parameter,string:ijss_calcul_des_limitations_du_traitement_journalier"
 msgid "IJSS"
-msgstr "Indémnité journalière de la sécurité sociale"
+msgstr "IJSS"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:ijss_calcul_des_periodes_d_indemnisation"
 msgid "IJSS"
-msgstr "Indémnité journalière de la sécurité sociale"
+msgstr "IJSS"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:ijss_regle_de_calcul_des_deductions_des_montants_percus"
 msgid "IJSS"
-msgstr "Indémnité journalière de la sécurité sociale"
+msgstr "IJSS"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:inclusion_du_mi_temps_therapeutique_calcul_des_limitations_du_traitement_journalier"
-msgid "Inclusion du mi-temps thérapeutique"
-msgstr "Inclusion du mi-temps thérapeutique"
+msgid "Calcul du mi-temps thérapeutique"
+msgstr "Calcul du mi-temps thérapeutique"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:inclusion_du_mi_temps_therapeutique_regle_de_calcul_des_deductions_des_montants_percus"
-msgid "Inclusion du mi-temps thérapeutique"
-msgstr "Inclusion du mi-temps thérapeutique"
+msgid "Calcul du mi-temps thérapeutique"
+msgstr "Calcul du mi-temps thérapeutique"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:limiter_au_net_calcul_des_limitations_du_traitement_journalier"
@@ -349,13 +529,13 @@ msgstr "Montant du mi-temps thérapeutique"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:pourcentage_ij_ta_calcul_du_traitement_de_base_journalier_en_fonction_des_tranches"
-msgid "Pourcentage IJ TA"
-msgstr "Pourcentage IJ TA"
+msgid "Pourcentage TA"
+msgstr "Pourcentage TA"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:pourcentage_ij_tb_calcul_du_traitement_de_base_journalier_en_fonction_des_tranches"
-msgid "Pourcentage IJ TB"
-msgstr "Pourcentage IJ TB"
+msgid "Pourcentage TB"
+msgstr "Pourcentage TB"
 
 msgctxt ""
 "model:rule_engine.rule_parameter,string:traitement_de_base_journalier_regle_de_calcul_des_deductions_des_montants_percus"
@@ -408,7 +588,3 @@ msgstr "Hospitalisation"
 msgctxt "view:claim.loss.hospitalisation.period:"
 msgid "Hospitalisation Period"
 msgstr "Période d'hospitalisation"
-
-msgctxt "view:claim.loss.hospitalisation.period:"
-msgid "Hospitalisation Periods"
-msgstr "Périodes d'hospitalisation"
