--- a/modules/account_invoice_slip/locale/fr.po
+++ b/modules/account_invoice_slip/locale/fr.po
@@ -8,11 +8,15 @@ msgstr "Tous les champs doivent être saisis avant de poursuivre"
 
 msgctxt "error:account.invoice.slip.configuration:"
 msgid ""
-"More than one draft slip for parameters:\nParty: %(party)s\nKind: "
-"%(business_kind)s\nDate: %(invoice_date)s"
+"More than one draft slip for parameters:\n"
+"Party: %(party)s\n"
+"Kind: %(business_kind)s\n"
+"Date: %(invoice_date)s"
 msgstr ""
-"Il y a plus d'un bordereau brouillon correspondant aux critères suivants :"
-"\nTiers : %(party)s\nType : %(business_kind)s\nDate : %(invoice_date)s"
+"Il y a plus d'un bordereau brouillon correspondant aux critères suivants :\n"
+"Tiers : %(party)s\n"
+"Type : %(business_kind)s\n"
+"Date : %(invoice_date)s"
 
 msgctxt "error:account.invoice:"
 msgid "Principal line reset following unreconciliation of invoice %s"
@@ -60,6 +64,10 @@ msgstr "Identifiant XML"
 
 msgctxt "field:account.invoice.slip.configuration,accounts:"
 msgid "Accounts"
+msgstr "Comptes"
+
+msgctxt "field:account.invoice.slip.configuration,accounts_names:"
+msgid "Accounts Names"
 msgstr "Comptes"
 
 msgctxt "field:account.invoice.slip.configuration,create_date:"
@@ -134,6 +142,10 @@ msgctxt "field:account.invoice.slip.parameters,journal:"
 msgid "Journal"
 msgstr "Journal"
 
+msgctxt "field:account.invoice.slip.parameters,name:"
+msgid "Name"
+msgstr "Nom"
+
 msgctxt "field:account.invoice.slip.parameters,party:"
 msgid "Party"
 msgstr "Tiers"
@@ -145,6 +157,10 @@ msgstr "Date du bordereau"
 msgctxt "field:account.invoice.slip.parameters,slip_kind:"
 msgid "Slip Kind"
 msgstr "Type de bordereau"
+
+msgctxt "field:account.move.line,principal_invoice_line:"
+msgid "Principal Invoice Line"
+msgstr "Ligne de facturation"
 
 msgctxt "help:account.invoice.slip.configuration,name:"
 msgid ""
