--- a/modules/claim_pasrau/doc/fr/CHANGELOG
+++ b/modules/claim_pasrau/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10156 Gestion des bordereaux de type pasrau
+
 Version 2.2 - 2018-10-12
 * OTH#0000 Utilisation du taux à la date de facturation - Amélioration de l'affichage du pourcentage
 * FEA#9881 Création du module
