--- a/modules/account_invoice_slip/doc/en/CHANGELOG
+++ b/modules/account_invoice_slip/doc/en/CHANGELOG
@@ -1,2 +1,5 @@
+* FEA#10156 Allow import/export for invoice slip configuration
+* OTH#0000 Use list instead of generator in select invoices request
+
 Version 2.2 - 2018-10-12
 * FEA#9974 Module creation
