--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10156 Handle pasrau slips
+
 Version 2.2 - 2018-10-12
 * OTH#0000 Search rate based on invoice_date - Improve percentage display
 * FEA#9881 Module Creation
