--- a/modules/claim/locale/fr.po
+++ b/modules/claim/locale/fr.po
@@ -97,9 +97,12 @@ msgid "The code must be unique!"
 msgstr "Le code doit être unique !"
 
 msgctxt "error:claim:"
-msgid "Declaration date cannot be posterior to today's date"
+msgid ""
+"Declaration date cannot be in the future, or posterior to the claim\'s "
+"creation date"
 msgstr ""
-"La date de déclaration ne peut être postérieure à la date d'aujourd'hui"
+"La date de déclaration ne peut être dans le futur, ou postérieure à la date "
+"de création du dossier"
 
 msgctxt "error:claim:"
 msgid ""
