--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10120 Improve error message when setting an invalid declaration date
+
 Version 2.2 - 2018-10-12
 * BUG#9925 Add a domain on the status of the sub-status of the close claim reason in order to filter them.
 * BUG#9753 Give right to delete claim losses and services to claim manage group
