commission_insurance_prepayment: Rename with_prepayment in has_prepayment (#2269)
Fields names starting with with are bad. Also, we check
whether any commission agent in the distribution hierarchy
uses prepayments rather than stop on the agent of the
contract

Fix #9915

--- a/modules/commission_insurance_prepayment/locale/fr.po
+++ b/modules/commission_insurance_prepayment/locale/fr.po
@@ -54,7 +54,7 @@ msgctxt "field:commission.simulate.line,is_prepayment:"
 msgid "Prepayment"
 msgstr "Précompte"
 
-msgctxt "field:contract,with_prepayment:"
+msgctxt "field:contract,has_prepayment:"
 msgid "With Prepayment"
 msgstr "Précompte"
 
