--- a/modules/commission_multi_agents/doc/fr/CHANGELOG
+++ b/modules/commission_multi_agents/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#9915 Possibilité de synchroniser le précompte de contrats sur-commissionnés
+
 Version 2.2 - 2018-10-12
 * OTH#0000 Possibilité d'avoir un protocole de commission de type assureur en second niveau (report manquant depuis d5a773fb4)
 
