claim_group: Pay to the company on the last day of work (#2271)
Fix #10053

--- a/modules/claim_group/doc/en/CHANGELOG
+++ b/modules/claim_group/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10053 Pay services to the company on the last day of work
+
 Version 2.2 - 2018-10-12
 * OTH#0000 Fix domain of "Post termination claim beahviour" field of contracts
 
