--- a/modules/claim_group/doc/fr/CHANGELOG
+++ b/modules/claim_group/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10053 Paiement des prestations à la société le dernier jour de présence
+
 Version 2.2 - 2018-10-12
 * OTH#0000 Correction du domaine du champ "Comportement des sinistres après résiliation" du contrat
 
