claim_life: Allow to delete beneficiaries (#2273)
Done by using the write data even though it is a setter_void.
This also improve the feeling when creating a new
beneficiary using the function field

Fix #10053

--- a/modules/claim_life/doc/en/CHANGELOG
+++ b/modules/claim_life/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10072 Allow to delete beneficiaries from a claim
+
 Version 2.2 - 2018-10-12
 * BUG#9277 Fix initialization / storage of beneficiary extra data
 * BUG#9074 Fix claim saving performances issues
