account_cog: missing translation (#2285)
Fix #0000

--- a/modules/account_cog/locale/fr.po
+++ b/modules/account_cog/locale/fr.po
@@ -806,3 +806,12 @@ msgstr "Emis"
 msgctxt "view:account.move:account."
 msgid "Post"
 msgstr "Emettre"
+
+
+msgctxt "view:account.tax:account."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "view:account.tax.template:account."
+msgid "Invoice"
+msgstr "Quittance"
