--- a/modules/account_invoice_cog/locale/fr.po
+++ b/modules/account_invoice_cog/locale/fr.po
@@ -299,3 +299,7 @@ msgstr "Emise"
 msgctxt "view:account.invoice:account_invoice."
 msgid "Invoice"
 msgstr "Quittance"
+
+msgctxt "view:account.invoice:account_invoice."
+msgid "Post"
+msgstr "Emettre"
