contract_insurance_invoice: Fix edge cases in get_invoice_periods (#2282)
Also, add doc \o/

Fix #10168

--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10168 Fix an edge case of get_invoice_periods which could lead to an infinite loop
+
 Version 2.2 - 2018-10-12
 * BUG#9972 Do not crash when changing subscriber in subscription process
 * BUG#9759 Translate frequency in invoice line detail rec_name
