claim_indemnification: Fix automatic rule input (#2301)
Fix #10198

--- a/modules/claim_indemnification_group/doc/en/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10198 Fix automatic rules input when only one rule is available 
+
 Version 2.2 - 2018-10-12
 * FEA#9102 Improve benefit configuration display on group contract
 * BUG#9123 Fix creation of group contracts if rules are directly on the benefit
