coog_core: Propagate dict schema modifications across the data (#2283)
Fix #10179

--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10179 Propagate renaming and deletion of dict field keys
+
 Version 2.2 - 2018-10-12
 * OTH#0000 Improve performances of get_user_language
 * OTH#0000 Improve and detail default trytond.conf
