--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10179 Propagation du renommage et de la suppression des clés de champs dictionnaire
+
 Version 2.2 - 2018-10-12
 * OTH#0000 Amélioration des performances pour get_user_language
 * OTH#0000 Amélioration du fichier de configuration "par défaut" de trytond
