--- a/modules/claim_indemnification_group/doc/en/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10215 Fix display and requireness issues of annuity frequency field 
 * BUG#10198 Fix automatic rules input when only one rule is available 
 
 Version 2.2 - 2018-10-12
