contract_insurance_invoice: Update exit condition for get_invoice_periods (#2305)
Fix #10223

--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10223 Fix a case where invalid invoice periods could be computed
 * BUG#10168 Fix an edge case of get_invoice_periods which could lead to an infinite loop
 
 Version 2.2 - 2018-10-12
