--- a/modules/account_payment_cog/doc/fr/CHANGELOG
+++ b/modules/account_payment_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10191 Possibilité d'échouer un groupe dont tous les paiements sont échoués
+
 Version 2.2 - 2018-10-12
 * FEA#10048 Ajout des labels sur les journaux de paiement
 * BUG#9851 Ne pas positionner de date de paiement sur toutes les lignes de mouvement comptable quand on crée un paiement depuis plusieurs lignes de signes inversés
