--- a/modules/migrator/doc/en/CHANGELOG
+++ b/modules/migrator/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10153 Adding of the delimiter option in the configuration and setting the semicolon as the default value for it
 * BUG#10107 Split option must be set to True and default job_size to 1000 for migrator batch
 
 Version 2.2 - 2018-10-12
