process: Update get_action_context to use pyson_context (#2308)
Fix #10229

--- a/modules/process/doc/en/CHANGELOG
+++ b/modules/process/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10229 Properly set the context when running a process
+
 Version 2.2 - 2018-10-12
 * BUG#9278 Add searcher on rec_name of process-process-step
 
