--- a/modules/endorsement_party_health_fr/doc/en/CHANGELOG
+++ b/modules/endorsement_party_health_fr/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10180 Fix a data loss problem when modifying the healthcare system
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
