--- a/modules/endorsement_party_health_fr/doc/fr/CHANGELOG
+++ b/modules/endorsement_party_health_fr/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10180 Correction d'une perte de données lors de la modification du régime
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
