--- a/modules/account_payment_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10193 When creating payment using the payment wizard, all pending lines that could modify the total payment amount are displayed to the user and he could choose to bypass some
 * BUG#10191 Allow to fail a group for which all payments already failed
 
 Version 2.2 - 2018-10-12
