coog_core: Use fast_invoice chain in default daily batch chain (#2322)
Fix #10249

--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10249 Use fast_invoice chain in default daily batch chain
 * BUG#10179 Propagate renaming and deletion of dict field keys
 
 Version 2.2 - 2018-10-12
