claim_life: Adding of the data 'person' on the claim rule engine context (#2295)
Fix  #10172

--- a/modules/claim_life/doc/fr/CHANGELOG
+++ b/modules/claim_life/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10172 Ajout de la donnée personne dans le contexte de la règle de paramétrage afin de calculer la date de naissance des affiliés
 * BUG#10072 Possibilité de supprimer les bénéficiaires depuis un sinistre
 
 Version 2.2 - 2018-10-12
