--- a/modules/claim_life/doc/en/CHANGELOG
+++ b/modules/claim_life/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10172 Adding of the data 'person' on the rule engine context in order to calculate the birthday of the covered element
 * BUG#10072 Allow to delete beneficiaries from a claim
 
 Version 2.2 - 2018-10-12
