--- a/modules/report_engine/doc/en/CHANGELOG
+++ b/modules/report_engine/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Raise the technical error if it is not caused by the template's syntax
+
 Version 2.2 - 2018-10-12
 * BUG#10026 Fix on model-less impressions
 * FEA#9985 Add pyson condition to report template. Useful to opt out templates that must be produced only under certain circumstances. Also work on action by events and attachments on e-mail.
