--- a/modules/report_engine/doc/fr/CHANGELOG
+++ b/modules/report_engine/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Retour de l'erreur technique si problème non directement lié au template
+
 Version 2.2 - 2018-10-12
 * BUG#10026 Correction sur l'impression de documents sans modèles
 * FEA#9985 Ajout d'une condition pyson sur les modèles de courrier. Utile pour ne pas traiter des modèles dont la condition ne serait pas vérifiée. Fonctionne également avec les actions par type d'évenement et les pièces jointes sur les mails.
