commission_insurance: Prorate base taxes / full amount on commissions (#2321)
There are some cases when a single invoice line may create
multiple commissions (for instance if the commission rate
changes during the invoice line validity period). In those
cases, there should be a way (in reportings) to access the
prorated amounts of taxes.

Fix #0000

--- a/modules/commission_insurance/doc/en/CHANGELOG
+++ b/modules/commission_insurance/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Add reporting fields with prorated tax amounts / full amounts on commissions
+
 Version 2.2 - 2018-10-12
 * FEA#9242 New tool to simulate all commissions directly from a product. If the commission amount is also based on extra data on the contract, the user can set them manually.
 * BUG#9912 Fix cancel wholesale type invoice
