contract_group: Add default order on organization hierarchy (#2317)
fix #10241

--- a/modules/contract_group/doc/en/CHANGELOG
+++ b/modules/contract_group/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10241 Add default order on hierarchy
+
 Version 2.2 - 2018-10-12
 * FEA#9315 Iteration on organization hierarchy labels
 * FEA#9315 Display legal entity hierarchy with their contracts
