--- a/modules/contract_group/doc/fr/CHANGELOG
+++ b/modules/contract_group/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10241 Ajout d'un tri par défaut sur la vue arborescente 
+
 Version 2.2 - 2018-10-12
 * FEA#9315 Iteration sur l'affichage des libellés dans la hierarchie
 * FEA#9315 Ajouter l'affichage de la hiérarchie des sociétés avec leurs contrats
