--- a/modules/claim_group_life_fr/doc/fr/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10124 Ajout de règles de rente par défaut
+
 Version 2.2 - 2018-10-12
 * FEA#10139 Ajout de décisions d'éligibilité par défaut avec gestion dans les règles de franchise 
 * FEA#10086 Ajout de règles de franchise en fonction de la nature de l'événement
