--- a/modules/contract_group/doc/fr/CHANGELOG
+++ b/modules/contract_group/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10189 Correction du transfert de risques entre contrats
 * FEA#10241 Ajout d'un tri par défaut sur la vue arborescente 
 
 Version 2.2 - 2018-10-12
