claim_group_life_fr: Use numeric instead of integer for TA, TB, TC rates (#2335)
Fix #00000

--- a/modules/claim_group_life_fr/doc/fr/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Utilisation de champs numérique pour les taux TA, TB, TC
 * FEA#10124 Ajout de règles de rente par défaut
 
 Version 2.2 - 2018-10-12
