analytic_commission: correct analytic lines details data type (#2326)
Fix #9962

--- a/modules/analytic_commission/doc/en/CHANGELOG
+++ b/modules/analytic_commission/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#9962 Correct analytic lines details data types
 * OTH#0000 Add second fiscal year to test scenario
 
 Version 2.2 - 2018-10-12
