contract_insurance_invoice_dunning: reset options manual end date before termination (#2325)
Fix #10242

--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10242 Reset terminated options manual end date when terminating contracts
+
 Version 2.2 - 2018-10-12
 * OTH#0000 Fix active translation
 * OTH#0000 Remove now useless "lowest_level_object"
