--- a/modules/rule_engine/doc/fr/CHANGELOG
+++ b/modules/rule_engine/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10221 Correction du formattage des erreurs
+
 Version 2.2 - 2018-10-12
 * FEA#9323 Ajout d'un vérificateur de code pour le moteur de règle
 * BUG#9313 Correction des jeux d'essai dans le cas où la règle définit des fonctions
