--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10275 Prevent tax reverse compute when total amount of indemnification is zero
 * BUG#10270 Fix on revaluation computation which erase the indemnification details
 * BUG#10087 Fix periodicity detection of indemnifications
 
