--- a/modules/account_invoice_slip/doc/en/CHANGELOG
+++ b/modules/account_invoice_slip/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#000 Fix relate on slip for related lines display
 * FEA#10156 Allow import/export for invoice slip configuration
 * OTH#0000 Use list instead of generator in select invoices request
 
