contract_document_request_line: allow adding document request lines on contract (#2333)
Fix #10264

--- a/modules/contract_insurance_document_request/doc/en/CHANGELOG
+++ b/modules/contract_insurance_document_request/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10264 Enable adding new document request lines on quotes
+
 Version 2.2 - 2018-10-12
 * BUG#7841 Fix duplicate medical documents on quotation creation by a user whom is not authorized to see those documents
 
