--- a/modules/contract_life_clause/doc/en/CHANGELOG
+++ b/modules/contract_life_clause/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10206 Make beneficiaries not editable if the contract's status is not quote
+
 Version 2.2 - 2018-10-12
 * BUG#8709 Make the beneficiary clauses and customized beneficiary clauses not required if contract is quote
 
