--- a/modules/account_aggregate/doc/fr/CHANGELOG
+++ b/modules/account_aggregate/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#9979 Ajout du compte comptable comme critère de tri lors de l'extraction
+
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
