--- a/modules/report_engine/doc/fr/CHANGELOG
+++ b/modules/report_engine/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10315 Ajout de la possibilité de trier l'ordre des paramètres de règle 
 * OTH#0000 Retour de l'erreur technique si problème non directement lié au template
 
 Version 2.2 - 2018-10-12
